[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Background/space.png" type="Texture" id=1]
[ext_resource path="res://Scripts/menu_name.gd" type="Script" id=2]
[ext_resource path="res://Fonts/poco/Poco.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/transicao.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds/sky.mp3" type="AudioStream" id=7]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.392157 )
border_width_left = 20
border_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="menu_name" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="transition" parent="." instance=ExtResource( 6 )]
visible = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4000, 1124 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1824, 416 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -6.191
pitch_scale = 0.86
autoplay = true

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 456.0
margin_top = 169.0
margin_right = 818.0
margin_bottom = 230.0
rect_min_size = Vector2( 1.5, 1.5 )
focus_mode = 0
mouse_filter = 2
mouse_default_cursor_shape = 0
input_pass_on_modal_close_click = false
custom_fonts/font = ExtResource( 4 )
custom_styles/read_only = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_styles/completion = SubResource( 9 )
text = "Input your nickname"
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="LineEdit" type="LineEdit" parent="."]
anchor_right = 0.523
margin_left = 404.0
margin_top = 289.0
margin_right = 187.56
margin_bottom = 372.0
custom_fonts/font = ExtResource( 4 )
custom_styles/read_only = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
max_length = 16
placeholder_text = "Your nickname"
placeholder_alpha = 0.381

[node name="Button" type="Button" parent="."]
margin_left = 558.0
margin_top = 541.0
margin_right = 706.0
margin_bottom = 573.0
focus_neighbour_top = NodePath("../LineEdit")
focus_neighbour_bottom = NodePath("../LineEdit")
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0, 1 )
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.294118, 0.294118, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "CONTINUE"
flat = true

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
